--- a/views/admin.pug
+++ b/views/admin.pug
@@ -91,10 +91,10 @@ block content
                       textarea(rows='4', cols='50', id='editor1' name='copmanydescription') Enter text here...
                       label Job Description
                       textarea(rows='4', cols='50', id='editor2' name='description') Enter text here...
-                    .image-upload
-                      label(for="file-input") Company Logo
-                        img(src='https://semantic-ui.com/images/wireframe/white-image.png')
-                      input(type="file" name="logo" id="file-input" accept="image/gif, image/png, image/jpeg")
+                    //- .image-upload
+                    //-   label(for="file-input") Company Logo
+                    //-     img(src='https://semantic-ui.com/images/wireframe/white-image.png')
+                    //-   input(type="file" name="logo" id="file-input" accept="image/gif, image/png, image/jpeg")
                     label Expected Salary
                     input(type='text'  name='salary')
                     label Website of the company
@@ -102,20 +102,20 @@ block content
                     label Apply Url or Email
                     input(type='text'  name='link')
                     input#checkbox(type='checkbox', name='paid', value='false', checked='')
-                    .jobpost__options
-                      .jobbox
-                        p Help your job stand out
-                        input(type="checkbox" id="postoptions" name="highlighted" checked="true")
-                        label(for="postoptions") Job post highlighted in yellow 
-                      .jobbox
-                        input(type="checkbox" id="postoptions" name="highlightedcolor")
-                        label(for="postoptions") Job post highlighted in your brand color
-                      .jobbox
-                        input(type="checkbox" id="postoptions" name="postoptions")
-                        label(for="postoptions") List job post on the front page for two weeks
-                      .jobbox
-                        input(type="checkbox" id="postoptions" name="postoptions" )
-                        label(for="postoptions") List job post on the front page for four weeks
+                    //- .jobpost__options
+                    //-   .jobbox
+                    //-     p Help your job stand out
+                    //-     input(type="checkbox" id="postoptions" name="highlighted" checked="true")
+                    //-     label(for="postoptions") Job post highlighted in yellow 
+                    //-   .jobbox
+                    //-     input(type="checkbox" id="postoptions" name="highlightedcolor")
+                    //-     label(for="postoptions") Job post highlighted in your brand color
+                    //-   .jobbox
+                    //-     input(type="checkbox" id="postoptions" name="postoptions")
+                    //-     label(for="postoptions") List job post on the front page for two weeks
+                    //-   .jobbox
+                    //-     input(type="checkbox" id="postoptions" name="postoptions" )
+                    //-     label(for="postoptions") List job post on the front page for four weeks
 
 
                     //- div.checkbox__field
