--- a/views/mixins/_secondmenu.pug
+++ b/views/mixins/_secondmenu.pug
@@ -3,5 +3,5 @@ mixin _secondmenu
       a.button(href='/sportsjobs-remote-jobs' active) Remote Jobs 
       a.button(href='/sportsjobs-internships') Internships
       a.button(href='/sports-companies') Companies
-      a.button(href='/sports-collections') Collections
+      a.button(href='/sportsjobs-collections') Collections
       a.button(href='https://sportekblog.webflow.io/') Blog
