--- a/views/jobsbyindustry.pug
+++ b/views/jobsbyindustry.pug
@@ -9,11 +9,14 @@ block content
       div.title
         h1 <strong>Be part of the sports revolution.</strong>
         h2 Find tech and startup jobs in sports.
+  section.jobpostvr
+    
+    .content
+      +_secondmenu     
+    div.textbox#industrylanding
         
-        div.textbox#industrylanding
-        
-        h1#headline Look for recent sports jobs in the sports industry
-        h2#subline Are you looking for a specific industry? <br>Take a look at our sports jobs collections. 
+    h1 Look for recent sports jobs in the sports industry
+    h2 Are you looking for a specific industry? <br>Take a look at our sports jobs collections. 
         .grid
             .jobcategory
                 a(href='/jobs-in-esports')
