--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -189,6 +189,11 @@ body {
 .jobpostvr>h1 {
   text-decoration: underline;
   font-weight: 400;
+  text-align: center;
+}
+.jobpostvr>h2{
+  text-align: center;
+  
 }
 
 .line {
@@ -985,9 +990,8 @@ td {
 .grid {
   display: flex;
   flex-direction: row;
-  padding-right: 20px;
-  padding-left: 250px;
-
+  justify-content: center;
+  margin-top: 15px;
 }
 
 .jobcategory>a>img {
