--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,8 +71,7 @@ body {
   z-index: 0;
   overflow: hidden;
   margin: 10vh auto 7.5vh;
-    max-width: 1200px;
-    max-width: 75rem;
+    max-width: 100%;
     padding-left: 24px;
     padding-left: 1.5rem;
     padding-right: 24px;
@@ -428,6 +427,7 @@ tr {
   border-collapse: collapse;
   width: 100%;
   margin: 10px;
+  
 }
 
 .joblist:hover {
