--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,6 +25,7 @@ html(lang='en')
     script(src='https://cdn.jsdelivr.net/npm/typeit@5.10.6/dist/typeit.min.js')
     script(async='' src='https://www.googletagmanager.com/gtag/js?id=UA-24727257-9')
     script(src='https://cdn.ckeditor.com/ckeditor5/12.0.0/classic/ckeditor.js')
+    script(src='https://js.stripe.com/v3/') 
     
     script.
       window.dataLayer = window.dataLayer || [];
